--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,9 @@ structopt-derive = "0.1.0"
 ssh2 = "0.3"
 clippy = {version = "*", optional = true}
 
+[dev-dependencies]
+quickcheck = "0.4.1"
+quickcheck_macros = "0.4.1"
+
 [features]
 default = []
