--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ error-chain = "0.11.0"
 structopt = "0.1.0"
 structopt-derive = "0.1.0"
 ssh2 = "0.3"
-clippy = {version = "*", optional = true}
 difference = "1.0"
-walkdir = "2"
+ignore = "0.3"
+im = "7.0.0"
 
 [features]
 default = []
