--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ authors = ["David Barsky <me@davidbarsky.com>"]
 notify = "4.0.0"
 loggerv = "0.4"
 log = "0.3"
-error-chain = "0.11.0"
 structopt = "0.1.0"
 structopt-derive = "0.1.0"
+failure = "0.1.0"
+failure_derive = "0.1.0"
 ssh2 = "0.3"
 ignore = "0.3"
 im = "7.0.0"
