--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ failure = "0.1.0"
 failure_derive = "0.1.0"
 ssh2 = "0.3"
 ignore = "0.3"
-im = "7.0.0"
+newtype-derive = { git = "https://github.com/davidbarsky/newtype-derive.git" }
 
 [features]
 default = []
